--- a/src/app/places/places.component.css
+++ b/src/app/places/places.component.css
@@ -73,6 +73,22 @@
   background-color: #f5f5f5;
 }
 
+.no-data {
+  text-align: center;
+  font-style: italic;
+  padding: 1rem;
+}
+
+.active-icon {
+  color: green;
+  cursor: pointer;
+}
+
+.inactive-icon {
+  color: red;
+  cursor: pointer;
+}
+
 /* Responsive */
 @media (max-width: 960px) {
   .places-table th, 
