--- a/src/app/places/places.component.html
+++ b/src/app/places/places.component.html
@@ -2,7 +2,7 @@
   <h1 class="title">Lugares Registrados</h1>
 </div>
 
-@if (places) {
+<div *ngIf="!loading">
 <div class="table-container">
   <table mat-table [dataSource]="places" class="places-table mat-elevation-z2">
     <!-- Columna Nombre -->
@@ -41,10 +41,29 @@
       <td mat-cell *matCellDef="let place">{{ place.zipCode }}</td>
     </ng-container>
 
+    <ng-container matColumnDef="active">
+      <th mat-header-cell *matHeaderCellDef>Activo</th>
+      <td mat-cell *matCellDef="let place">
+        <mat-icon 
+          [class.active-icon]="place.isActive" 
+          [class.inactive-icon]="!place.isActive"
+        >
+          {{ place.isActive ? 'check_circle' : 'cancel' }}
+        </mat-icon>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="columns"></tr>
     <tr mat-row *matRowDef="let row; columns: columns"></tr>
+
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell no-data" [attr.colspan]="columns.length">
+        No se encontraron registros
+      </td>
+    </tr>
   </table>
 </div>
-} @else {
+</div>
+<div *ngIf="loading">
   <app-loading></app-loading>
-}
+</div>
